--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,27 +1,12 @@
 <div class="profile-page">
 
-    <div class="banner-user-info">
+    <div class="banner-user-info banner">
         <div class="row">
-            <div class="col-xs-12 col-md-4 offset-md-4">
-                <!-- [src]="profile.image" -->
-                <div class="profile-user">
-                    <div class="cover">
-                       <a href=""><img src="./../../../assets//img//ah.jpg" class="user-img" /></a> 
-                    </div>
-                    <div class="hover">
-                        <div class="hover-cover real"></div>
-                        <div class="hover-info">
-                                <img src="./../../../assets//img//ah.jpg" class="user-img" />
-                                <h4> profile.username </h4>
-                                <p class="bio" > profile.bio </p>
-                        </div>
-                      
-                    </div>
-
-                </div>
-            </div>
+         
             <div class="col-xs-12 col-md-10 offset-md-1">
                 <div class="user-info-meta">
+                    <h2 class="user-info-text">YOUR POSTS </h2>
+                   
                     <a routerLink="/settings" aria-label="GitHub Repository" class="  mat-button mat-button-base"
                         mat-button tabindex="0" aria-disabled="false">
                         <mat-icon>settings_applications</mat-icon>
@@ -29,7 +14,7 @@
                         <div class="mat-button-ripple mat-ripple" matripple=""></div>
                         <div class="mat-button-focus-overlay"></div>
                     </a>
-                    <app-like-button class="bl"></app-like-button>
+                  
                 </div>
 
 
