--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   color: #fff;
   font-size: 1.4rem !important;
 
