--- a/src/sass/abstracts/_variable.scss
+++ b/src/sass/abstracts/_variable.scss
@@ -19,6 +19,7 @@ $container-max-widths: (
 );
 :root{
   --base-color:#ff4081;
+  --base-color-rgb:rgb(255, 64, 129);
   --base-green-color: #28a745;
   --base-2-color:#5c5a98;
   --base-3-color:#36547b;
