--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
 top: 0;
 left: 0;
 right: 0;
-z-index: 1000;
+z-index: 2800;
 box-shadow: 0 3px 5px -1px rgba(0,0,0,.2),0 6px 10px 0 rgba(0,0,0,.14),0 1px 18px 0 rgba(0,0,0,.12);
 }
 .app-container{
@@ -11,9 +11,9 @@ box-shadow: 0 3px 5px -1px rgba(0,0,0,.2),0 6px 10px 0 rgba(0,0,0,.14),0 1px 18p
     min-height: 100vh;
 }
 .route-outler{
-    min-height: 100%;
-    padding-bottom: 110px;
-  margin-top: 53.6px;
+    min-height: 100vh;
+    padding-bottom: 2rem;
+  margin-top: 3.35rem;
    
 
 }
@@ -26,10 +26,10 @@ app-spinner{
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: 3000;
+  z-index: 30000;
 }
 app-footer{
-    position: absolute;
-    bottom: 0px;
+    // position: absolute;
+    // bottom: 0px;
     width: 100%;
 }
