--- a/src/app/blog/post/post.component.scss
+++ b/src/app/blog/post/post.component.scss
@@ -1,22 +1,35 @@
 .banner {
-    display: flex;
+  display: flex;
   color: #fff;
-  background:  #333;
+  background: #333;
   padding: 2rem;
   margin-bottom: 2rem;
-  margin-top: 53.6px;
+  margin-top: 3.35rem;
   box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, .3), inset 0 -8px 8px -8px rgba(0, 0, 0, .3);
- &-meta{
-     display: flex;
+
+  &-meta {
+    display: flex;
+  }
+
+  .button-row {
+    align-self: center;
+    margin-left: auto;
+    &__edit{
+      margin-right: .5rem;
+    }
+  }
+}
+
+::ng-deep .mat-raised-button{
+  padding: 0 1rem !important;
+  min-width: 3rem;
+  font-size: 1rem;
  }
 
-.button-row{
+
+.bl {
+  align-self: center;
   margin-left: 2rem;
-}
-}
-.bl{
-    align-self: center;
-    margin-left: 2rem;
 }
 
 .article-page .card {
@@ -36,6 +49,7 @@
 .article-page .comment-form .card-block textarea {
   border: 0px;
   padding: 1.25rem;
+  width: 100%;
 }
 
 .article-page .card .card-footer {
@@ -52,15 +66,17 @@
   display: flex;
   align-items: center;
 
-  
+
 }
-.space{
-    flex-grow: 1;
+
+.space {
+  flex-grow: 1;
 }
-.btn-icon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.btn-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-control {
@@ -76,22 +92,40 @@
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
 }
-.tag-list{
+
+.tag-list {
   border-top: 1px solid #55595c;
 }
-.ql-container{
+
+.ql-container {
   font-size: 6rem !important;
 }
-.ql-container{
+
+.ql-container {
   font-size: 6rem !important;
 }
+
 ::ng-deep {
-  .ql-snow .ql-editor  {
-   font-size: 1.35rem;
-   line-height: 1.58;
-   word-break:break-word;
-   color: rgba(0, 0, 0, 0.84);
-   overflow-wrap: break-word;
-   font-weight: 400;
+  .ql-snow .ql-editor {
+    font-size: 1.35rem;
+    line-height: 1.58;
+    word-break: break-word;
+    color: rgba(0, 0, 0, 0.84);
+    overflow-wrap: break-word;
+    font-weight: 400;
   }
+}
+
+.thumbl {
+  height: 25rem;
+  max-height: 25rem;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
+
+.loading-more{
+  width: 100%;
 }
