--- a/src/app/dashboard/posts-board/posts-board.component.html
+++ b/src/app/dashboard/posts-board/posts-board.component.html
@@ -1,78 +1,99 @@
-<div class="search-div">
-    <a  routerLink="/editor" mat-raised-button>
-      <mat-icon>add</mat-icon>create Post
-    </a>
-    <mat-form-field class="search-form-field">
-        <input matInput (keyup)="applyFilter()" [(ngModel)]="value" placeholder="Filter">
-        <button mat-button   *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="clear()">
-            <mat-icon>close</mat-icon>
-          </button>
-      </mat-form-field>
-     
+<div class="container post-board">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 col-xs-12">
+    
+      <h1 class="text-xs-center">Dashboard Posts</h1>
   </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-10 col-sm-12 col-md-12 col lg-12">
+      <div class="search-div">
+        <a  routerLink="/editor" mat-raised-button>
+          <mat-icon>add</mat-icon>create Post
+        </a>
+        <mat-form-field class="search-form-field">
+            <input matInput (keyup)="applyFilter()" [(ngModel)]="value" placeholder="Filter">
+            <button mat-button   *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="clear()">
+                <mat-icon>close</mat-icon>
+              </button>
+          </mat-form-field>
+         
+      </div>
+    </div>
+   
+  </div>
+
+   <div class="row">
+    <div class="col-10 col-sm-12 col-md-12 col lg-12">
+    <mat-table [dataSource]="listData" matSort class="mat-elevation-z8">
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+      <!-- Name Column -->
+      <ng-container matColumnDef="title">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> title </mat-header-cell>>
+        <mat-cell *matCellDef="let element"> {{element.title}} </mat-cell>>
+      </ng-container>
+    
+     
+      <ng-container   matColumnDef="author">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> author </mat-header-cell>>
+        <mat-cell *matCellDef="let element"> {{ element.author.firstName}} </mat-cell>>
+    
+      </ng-container>
+    
+      <ng-container   matColumnDef="date">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> createdAt </mat-header-cell>>
+        <mat-cell *matCellDef="let element"> {{ element.date}} </mat-cell>>
+    
+      </ng-container>
+     
+    
+     
+     
+      <ng-container   matColumnDef="loading">
+         <mat-footer-cell *matFooterCellDef>
+           loading...
+         </mat-footer-cell>
+        </ng-container>
+    
+        <ng-container   matColumnDef="nodata">
+            <mat-footer-cell *matFooterCellDef>
+              No Data...
+            </mat-footer-cell>
+           </ng-container>
+     
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <a [routerLink]="['/editor',row.id]" mat-icon-button (click)="update(row)"><mat-icon>launch</mat-icon> </a>
+            <button  mat-icon-button color="warn" (click)="delete(row)" ><mat-icon>delete_outline</mat-icon> </button>
+          </mat-cell>
+        </ng-container>
+    
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    
+      <mat-footer-row [ngClass]="{'hiden':listData!=null}" *matFooterRowDef="['loading']"></mat-footer-row>
+      <mat-footer-row [ngClass]="{'hiden':!(listData!=null && listData.data.length==0)}" *matFooterRowDef="['nodata']"></mat-footer-row>
+      
+    
+    </mat-table>
+    </div>
+    <div class="col-10 col-sm-12 col-md-12 col lg-12">
+    <mat-paginator 
+     
+      [pageSize]="pageSize"
+      [pageSizeOptions]="pageSizeOptions" 
+      [length]="totalItem" showFirstLastButtons 
+      (page)="onChangePage($event)"
+      >
+    </mat-paginator>
+    </div>
+   </div>
+</div>
+
   
   <!-- <mat-spinner *ngIf="isLoading" ></mat-spinner> -->
   <app-spinner *ngIf="isLoading"></app-spinner>
-  
-  <mat-table [dataSource]="listData" matSort class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-    <!-- Name Column -->
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> title </mat-header-cell>>
-      <mat-cell *matCellDef="let element"> {{element.title}} </mat-cell>>
-    </ng-container>
-  
-   
-    <ng-container   matColumnDef="author">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> author </mat-header-cell>>
-      <mat-cell *matCellDef="let element"> {{ element.author.firstName}} </mat-cell>>
-  
-    </ng-container>
-  
-    <ng-container   matColumnDef="date">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> createdAt </mat-header-cell>>
-      <mat-cell *matCellDef="let element"> {{ element.date}} </mat-cell>>
-  
-    </ng-container>
-   
-  
-   
-   
-    <ng-container   matColumnDef="loading">
-       <mat-footer-cell *matFooterCellDef>
-         loading...
-       </mat-footer-cell>
-      </ng-container>
-  
-      <ng-container   matColumnDef="nodata">
-          <mat-footer-cell *matFooterCellDef>
-            No Data...
-          </mat-footer-cell>
-         </ng-container>
-   
-      <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef></mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <a [routerLink]="['/editor',row.id]" mat-icon-button (click)="update(row)"><mat-icon>launch</mat-icon> </a>
-          <button  mat-icon-button color="warn" (click)="delete(row)" ><mat-icon>delete_outline</mat-icon> </button>
-        </mat-cell>
-      </ng-container>
-  
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  
-    <mat-footer-row [ngClass]="{'hiden':listData!=null}" *matFooterRowDef="['loading']"></mat-footer-row>
-    <mat-footer-row [ngClass]="{'hiden':!(listData!=null && listData.data.length==0)}" *matFooterRowDef="['nodata']"></mat-footer-row>
-    
-  
-  </mat-table>
-  <mat-paginator 
-   
-    [pageSize]="pageSize"
-    [pageSizeOptions]="pageSizeOptions" 
-    [length]="totalItem" showFirstLastButtons 
-    (page)="onChangePage($event)"
-    >
-  </mat-paginator>
-  
+ 
