--- a/src/app/editor/editor/editor.component.scss
+++ b/src/app/editor/editor/editor.component.scss
@@ -8,7 +8,7 @@
     background-clip: text;
     color: transparent;
   }
-.editor-form{
+.editor-form fieldset{
    
     display: flex;
     flex-direction: column;
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
 }
-.editor-form>*{
+.editor-form fieldset >*{
     width: 75%;
 }
 
