--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -33,6 +33,7 @@
   transform-origin: bottom center;
   transform: scale(0);
   display: inline-block;
+  padding: 0 1rem;
   
   
 }
@@ -46,17 +47,20 @@
   animation-fill-mode: forwards;
 }
 .banner p {
-  background-image: linear-gradient(to right left, #ff4081, #faaebd);
-  background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
+  // background-image: linear-gradient(to right left, #ff4081, #faaebd);
+  // background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  // -webkit-background-clip: text;
+  // background-clip: text;
+  // color: transparent;
   padding: 0;
   font-size: 1.5rem;
   font-style: italic;
   font-weight: 300 !important;
   margin: 1rem;
-
+  color: #fff;
+  text-shadow: 1px 1px #ff4081, 
+  2px 2px #ff4081, 
+  3px 3px #ff4081;
   animation :knock 0.1s linear 0.8s;
   animation-fill-mode: forwards;
   transform: translateY(1rem);
@@ -198,6 +202,3 @@
     height: 3rem;
   }
 
-  // .post_list{
-  //   position: relative;
-  // }
