--- a/src/app/shared/blogComponents/post-meta/post-meta.component.scss
+++ b/src/app/shared/blogComponents/post-meta/post-meta.component.scss
@@ -1,17 +1,25 @@
 .post-meta{
     display: flex;
+    font-size: 1.2rem;
 }
 .post-meta-info{
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
+    margin-left: 1.5rem;
 }
 .post-meta-link{
     align-self: center;
 }
 .post-meta-img{
-    height: 3rem;
-    width: 3rem;
+    font-size: 3rem;
     border-radius: 50%;
     margin-right: 1rem;
 
+}
+.author{
+    margin: 0 1.5rem;
+}
+.date{
+    margin: 0 .5rem;
+    color: #373D3F;
 }
