--- a/src/app/shared/blogComponents/post-preview/post-preview.component.scss
+++ b/src/app/shared/blogComponents/post-preview/post-preview.component.scss
@@ -1,7 +1,12 @@
 .article-preview {
-
+  background-image: linear-gradient(105deg, transparent 0%, transparent 50%, rgb(255, 64, 129,.3) 50%);
+  background-size: 100%;
+  border-radius: 3px;
+ 
   margin: .5rem;
   margin-bottom: 2rem;
+ 
+
 }
 
 .example-header-image {
@@ -19,13 +24,16 @@
 }
 
 .card {
-  min-height: 18rem;
+  min-height: 10rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content:space-around;
   box-shadow:var(--card-box-shadow);
   margin: 2rem 0;
+ overflow: hidden;
+  position: relative;
+
 }
 
 .card-title {
@@ -35,15 +43,177 @@
 
 .grow {
   flex-grow: 1;
+ 
 }
 .preview-link{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  width: 50%;
+ 
 }
 .preview-link >*{
   margin: .5rem 0;
  }
+
  .btn-text{
    align-self: flex-start;
  }
+ ::ng-deep .mat-chip-list{
+
+ }
+ .list{
+   display: flex;
+ }
+
+ .description{
+  position: absolute;
+  right: 0;
+ text-align: center;
+  width: 50%;
+  color: #fff;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 2rem;
+  color: #373D3F;
+  font-style: italic;
+font-weight: 100;
+line-height: 145%;
+font-size: 1.5rem;
+
+ }
+ 
+.subtitles-icon ,.description-icon{
+  color: var(--base-color);
+}
+
+
+////////////////////@extend
+
+.mb-wrap {
+  margin : 1.25rem auto; 
+  padding : 1.25rem; 
+  position : relative; 
+  width : 16rem; 
+
+} 
+
+.mb-wrap p {
+  margin : 0; 
+  padding : 0; 
+}
+
+.mb-wrap blockquote {
+  margin : 0; 
+  padding : 0; 
+  position : relative; 
+} 
+
+.mb-wrap cite {
+  font-style : normal; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+
+.mb-style-2 blockquote {
+  padding-top :6rem; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+
+.mb-style-2 blockquote:after {
+    background: none repeat scroll 0 0 rgba(235, 150, 108, 0.8);
+    border-radius: 50% 50% 50% 50%;
+    color: rgba(255, 255, 255, 0.5);
+    content: "❞";
+    font-family: 'icons';
+    font-size: 4rem;
+    height: 5rem;
+    width:  5rem;
+    left: 50%;
+    line-height: 7rem;
+    margin-left: -4.0625rem;
+    position: absolute;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
+    top: 0;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+   
+}
+// .mb-style-2 blockquote:before {
+//     border-left: 5px solid rgba(235, 150, 108, 0.1);
+//     border-radius: 50% 50% 50% 50%;
+//     content: "";
+//     height: 31.25rem;
+//     left: -3.125rem;
+//     position: absolute;
+//     top: 0;
+//     width: 31.25rem;
+//     z-index: -1;
+// }
+
+.mb-style-2 blockquote p {
+  background : none repeat scroll 0 0 rgba(255, 255, 255, 0.5); 
+  box-shadow : 0 -6px 0 rgba(235, 150, 108, 0.2); 
+  color : rgba(235, 150, 108, 0.8); 
+  display : inline; 
+  font-family : Baskerville, Georgia, serif; 
+  font-style : italic; 
+  font-size : 1.5rem; 
+  text-shadow : 0 1px 1px rgba(255, 255, 255, 0.5);  
+  padding: 1rem;
+} 
+
+.mb-attribution {
+  text-align : right; 
+} 
+
+ .mb-author {
+  color : #D48158; 
+  font-size : 1.125rem; 
+  font-weight : bold; 
+  padding-top : .625rem; 
+  text-shadow : 0 1px 1px rgba(255, 255, 255, 0.1); 
+  text-transform : uppercase; 
+}  
+
+cite a {
+  color : #D7AA94; 
+  font-style : italic; 
+} 
+
+cite a:hover {
+  color : #D48158; 
+} 
+.grow{
+ 
+  display: flex;
+  // justify-content: center;
+  // z-index: 2000;
+  // cursor: pointer;
+  
+ 
+}
+.grow-icon{
+  
+  font-size: 2rem;
+  color: #fff;
+  position: absolute;
+  top: 6rem;
+  right: 1.5rem;
+  box-shadow: 3px 3px 5px rgba(255, 255, 255, 0.1);
+background-color:rgba(255, 255, 255, 0.1);
+  z-index: 2000;
+  cursor: pointer;
+}
+.like{
+  z-index: 2000;
+  cursor: pointer;
+}
