--- a/src/app/shared/dialogs/confirm-token.component.scss
+++ b/src/app/shared/dialogs/confirm-token.component.scss
@@ -1,7 +1,12 @@
  /* mat-confirm-dialog (customised dialog) */
+ 
+ .confirm-dialog-container{
+     margin-top: 3rem;
+ }
  .confirm-dialog-container .mat-dialog-container {
     border-radius: .25em .25em .4em .4em;
     padding: 0px;
+ 
 }
 .confirm-dialog-container .content-container{
     margin: 5px 5px 15px 5px;
@@ -37,4 +42,21 @@ border-radius: 0px;
     padding:  35px 16px;
     text-align: center;
     font-size: 20px;
+}
+.form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.form >*{
+    width: 100%;
+}
+.form-input{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form-input > *{
+    width: 100%;
 }
