--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer>
   <div class="footer">
     <div class="footer-logo">
-      <img  alt="angular" class="footer-angular-logo" src="../../../../assets/img/ah.jpg">
-      <span ><a  href="https://angular.io">Learn Angular</a></span>
+      <img  alt="ahmad" class="footer-angular-logo" src="../../../../assets/img/ah.jpg">
+      <span ><a  href="https://angular.io">Learn Developer</a></span>
     </div>
 
     <div class="footer-version">
-      <span  class="footer-version">Current Version: 8.2.1</span>
+      <span  class="footer-version">Current Version: 1</span>
     </div>
-    <div  class="footer-copyright"><span >Powered by Google ©2010-2019.</span><a  href="https://github.com/angular/components/blob/master/LICENSE">Code licensed under an MIT-style License.</a><span >Documentation licensed under CC BY 4.0.</span></div>
+    <div  class="footer-copyright"><span >Powered by onlineforma prof ©2020-2021.</span><a  href="https://github.com/angular/components/blob/master/LICENSE">Code licensed under an ahmad.</a><span >Documentation licensed under CC BY 1.</span></div>
   </div>
 </footer>
