--- a/src/app/shared/layout/side-nav/side-nav.component.scss
+++ b/src/app/shared/layout/side-nav/side-nav.component.scss
@@ -3,12 +3,12 @@
   // top: 250px;
 
   &__content {
-    margin-top: 25px;
-    margin-right: 25px;
+    margin-top: 1.56rem;
+    margin-right: 1.56rem;
     
     // width: 240px;
     height: 100%;
-    // min-height: 100vh;
+     min-height: 100vh;
     overflow: auto;
     background: #333;
   }
@@ -20,5 +20,7 @@
   background:  #eb2f64;
 
 color: #fff;
+ font-size: 1.6rem;
   
 }
+
