--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -1,21 +1,15 @@
 .u-center-text { text-align: center !important; }
 
 .u-margin-bottom-small { margin-bottom: 1.5rem !important; }
-.u-margin-bottom-medium {
-    margin-bottom: 4rem !important;
 
-    @include respond(tab-port) {
-        margin-bottom: 3rem !important;
-    }
-}
-
-.u-margin-bottom-big { 
-    margin-bottom: 8rem !important;
-
-    @include respond(tab-port) {
-        margin-bottom: 5rem !important;
-    }
-}
 
 .u-margin-top-big { margin-top: 8rem !important; }
 .u-margin-top-huge { margin-top: 10rem !important; }
+
+.text-xs-center {
+    text-align: center;
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
